--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,14 @@
 {{ define "main" }}
 <article>
-  <h1>{{ .Title }}</h1>
-  {{ if .Content }}<div class="content">{{ .Content }}</div>{{ end }}
-  
-  <h2>Poems</h2>
-  <ul>
-    {{ range where .Site.RegularPages "Type" "poems" }}
-    <li><a href="{{ .Permalink }}">{{ .Title }}</a> — <span class="date">{{ .Date.Format "January 2, 2006" }}</span></li>
-    {{ end }}
-  </ul>
+    <h1>{{ .Title }}</h1>
+    {{ if .Content }}<div class="content">{{ .Content }}</div>{{ end }}
+
+    <h2>Poems</h2>
+    <ul>
+        {{ range where .Site.RegularPages "Type" "poems" }}
+        <li><a href="{{ .Permalink }}">{{ .Title }}</a> — <span class="date">{{ .Date.Format "January 2, 2006" }}</span>
+        </li>
+        {{ end }}
+    </ul>
 </article>
 {{ end }}
